fix(Offsets): Extend padding on small screens

--- a/src/styles/sections/_skills.scss
+++ b/src/styles/sections/_skills.scss
@@ -38,8 +38,8 @@
   .section-skills {
 
     .skill {
-      padding: 0  16px;
-      margin:  0 -16px;
+      padding: 10px 16px;
+      margin:   0  -16px;
 
       .meta {
         display: block;
